RESOLVED FIXED58371
[chromium] Fix spelling layout tests since virtual function changed
https://bugs.webkit.org/show_bug.cgi?id=58371
Summary [chromium] Fix spelling layout tests since virtual function changed
John Abd-El-Malek
Reported 2011-04-12 13:37:01 PDT
[chromium] Fix spelling layout tests since virtual function changed
Attachments
Patch (1.58 KB, patch)
2011-04-12 13:37 PDT, John Abd-El-Malek
no flags
Patch (1.97 KB, patch)
2011-04-12 15:49 PDT, John Abd-El-Malek
no flags
John Abd-El-Malek
Comment 1 2011-04-12 13:37:23 PDT
Jian Li
Comment 2 2011-04-12 13:40:03 PDT
Please also update ChangeLog.
Eric Seidel (no email)
Comment 3 2011-04-12 13:45:07 PDT
ChangeLog fail. also, strange commit message. :( And failed to close the bug. :( webkit-patch will do this all for you. But I can understand that our tools can be confusing to those not familiar with them.
John Abd-El-Malek
Comment 4 2011-04-12 13:50:06 PDT
(In reply to comment #3) > ChangeLog fail. > > also, strange commit message. :( > > And failed to close the bug. :( > > webkit-patch will do this all for you. But I can understand that our tools can be confusing to those not familiar with them. sorry, I was in a hurry to fix the build. I thought it's ok to commit manually for tree fixes? I think I was confused because I ran webkit-patch in Tools/DumpRenderTree/chromium, and it didn't find a ChangeLog there.
Eric Seidel (no email)
Comment 5 2011-04-12 13:52:48 PDT
(In reply to comment #4) > (In reply to comment #3) > > ChangeLog fail. > > > > also, strange commit message. :( > > > > And failed to close the bug. :( > > > > webkit-patch will do this all for you. But I can understand that our tools can be confusing to those not familiar with them. > > sorry, I was in a hurry to fix the build. I thought it's ok to commit manually for tree fixes? > > I think I was confused because I ran webkit-patch in Tools/DumpRenderTree/chromium, and it didn't find a ChangeLog there. Understandable. And yes, its certainly acceptable to commit build fixes w/o much process. We still generally have ChangeLogs for them. Seems like you got bit by Chromium's DRT missing a ChangeLog. Thanks for the quick fix.
John Abd-El-Malek
Comment 6 2011-04-12 15:49:23 PDT
John Abd-El-Malek
Comment 7 2011-04-12 15:50:30 PDT
please ignore the latest patch, that was uploaded here by accident
Eric Seidel (no email)
Comment 8 2011-04-12 16:31:50 PDT
Comment on attachment 89287 [details] Patch I'm sorry our tools have caused you so much trouble. There is a bug about webkit-patch needing to warn people when uploading to closed patches.
Note You need to log in before you can comment on or make changes to this bug.