[chromium] Fix spelling layout test.  BUG=https://bugs.webkit.org/show_bug.cgi?id=58371

Canonical link: https://commits.webkit.org/73392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83632 268f45cc-cd09-0410-ab3c-d52691b4dbfc